Remove duplicate theme from sample file, prioritize active over hover highlighting to avoid flickering

--- a/client/src/style/scss/custom_theme_variables.scss
+++ b/client/src/style/scss/custom_theme_variables.scss
@@ -7,5 +7,5 @@ html {
     --masthead-text-active: #{$masthead-text-active};
     --masthead-link-color: #{$masthead-link-color};
     --masthead-link-hover: #{$masthead-link-hover};
-    --masthead-link-active: #{$masthead-link-background};
+    --masthead-link-active: #{$masthead-link-active};
 }
